--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -3,7 +3,11 @@
         <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-                <button routerLink = '/member/{{member.username}}' class="btn btn-primary">
+                <!-- <button routerLink = '/member/{{member.username}}' class="btn btn-primary">
+                    <i class="fa fa-user"></i>
+                </button> -->
+
+                <button (click) ="btnClick(member.username)" class="btn btn-primary">
                     <i class="fa fa-user"></i>
                 </button>
             </li>
