--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -7,13 +7,13 @@
                     <i class="fa fa-user"></i>
                 </button> -->
 
-                <button (click) ="btnClick(member.username)" class="btn btn-primary">
+                <button (click) ="viewProfile(member.username)" class="btn btn-primary">
                     <i class="fa fa-user"></i>
                 </button>
             </li>
 
             <li class="list-inline-item">
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" (click) ="addLike(member)" >
                     <i class="fa fa-heart"></i>
                 </button>
             </li>
