--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -19,7 +19,10 @@
             </li>
 
             <li class="list-inline-item">
-                <button class="btn btn-primary">
+                <button 
+                        [queryParams] = '{tab: 3}'
+                        class="btn btn-primary" 
+                        routerLink='/members/{{member.username}}'>
                     <i class="fa fa-envelope"></i>
                 </button>
             </li>
